<resources>
    <string name="app_name">UEE</string>
    <string name="expens">Expens</string>
    <string name="income">Income</string>
    <string name="home">Report History</string>
    <string name="report_gen">Report generator</string>
    <string name="lost">Lost</string>
    <string name="detaild">Detaild</string>
    <string name="report_generator">Report Generator</string>
    <string name="ttytyry">TTytyry</string>
    <string name="income_report">Income Report</string>
    <string name="profit_loss_repot">Profit/Loss Repot</string>
    <string name="profit_loss_detaild_report">Profit/Loss Detaild Report</string>
    <string name="expenss_report">Expenss Report</string>
    <string name="create">Create</string>
    <string name="date">Date</string>
    <string name="category">Category</string>
    <string name="create_income">Create Income</string>
    <string name="succuesful">Succuesful</string>
    <string name="successfully_updated">Successfully updated</string>
    <string name="error">Error</string>
    <string name="error_occured">Error occured</string>
    <string name="operation_succuesful">Operation succuesful</string>
    <string-array name="tax_spinner">
        <item>Select Tax</item>
        <item>10% Tax</item>
        <item>20% Tax</item>
        <item>30% Tax</item>
        <item>40% Tax</item>
    </string-array>
    <string-array name="term_spinner">
        <item>Select Term</item>
        <item>2 months</item>
        <item>6 months</item>
        <item>1 Year</item>
        <item>2 Years</item>
    </string-array>
</resources>
