<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
    android:id="@+id/repothome"
    android:enabled="true"
    android:icon="@drawable/repot_generator_home"
    android:title="@string/home"/>

    <item
        android:id="@+id/repotincome"
        android:enabled="true"
        android:icon="@drawable/income"
        android:title="@string/income"/>

    <item
        android:id="@+id/repotexpens"
        android:enabled="true"
        android:icon="@drawable/expenss"
        android:title="@string/expens"/>
    <item
        android:id="@+id/reportlost"
        android:enabled="true"
        android:icon="@drawable/loss"
        android:title="@string/lost"/>
    <item
        android:id="@+id/repotdetaild"
        android:enabled="true"
        android:icon="@drawable/detaild_repot"
        android:title="@string/detaild"/>


</menu>